<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:id="@+id/job_item_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="match_parent">


            <android.support.v7.widget.CardView
                    android:id="@+id/image_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:cardCornerRadius="0dp"

                    android:layout_marginTop="0dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp">

                <ImageView

                        android:id="@+id/company_logo"
                        android:src="@drawable/ic_launcher_background"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                android:transitionName="@string/company_logo"/>

            </android.support.v7.widget.CardView>


            <TextView
                    android:id="@+id/job_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_title"
                    android:transitionName="@string/job_title"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/image_cardView" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
            <TextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name"
                    android:transitionName="@string/company_name"
                    android:textColor="#000"
                    android:textStyle="italic|bold"
                    android:textSize="13sp"
                    app:layout_constraintTop_toBottomOf="@+id/job_title"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"/>
            <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="#000"

                    android:transitionName="@string/location"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@+id/company_name"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"/>
            <TextView
                    android:id="@+id/post_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_date"
                    android:textColor="#000"

                    android:transitionName="@string/post_date"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@+id/location"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>